--- a/index.html
+++ b/index.html
@@ -3,9 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Development portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    
+<body class="open-sans-normal">
+    <header>
+          <nav>
+            <h3 class="heading-title">Ma<span class="heading-title1">r</span>y</h3>
+            <ul>
+                <li><a class="list1" href="">Portfolio</a></li>
+                <li><a class="list1" href="">Blog</a></li>
+                <button class="button1">Hire Me</button>
+            </ul>
+          </nav>
+
+          <div class="banner-parent">
+            <div class="banner-text">
+                <h4>Hi, I  am</h4>
+                <h1>Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="button1">Download CV</button>
+                <button class="button1">Contact</button>
+            </div>
+            <div class="banner-image">
+                <img class="image1" src="/images/hardy.png" alt="">
+            </div>
+          </div>
+    </header>
+    <main>
+        <section class="section-title">
+              <h3 class="heading-3">About Me</h3>
+              <p class="para-1">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+              <div class="address">
+                <div class="address-child">
+                    <p class="parg">Name:</p>
+                    <p>Bijoy karmokar</p>
+                </div>
+                <div class="address-child">
+                    <p class="parg">Email:</p>
+                    <p>bijoykarmokar798@gmail.com</p>
+                </div>
+                <div class="address-child">
+                    <p class="parg">Date of Birth:</p>
+                    <p>15 April,2003</p>
+                </div>
+                <div class="address-child">
+                    <p class="parg">From:</p>
+                    <p>Pirgachha,Bogura, Bangladesh</p>
+                </div>
+              </div>
+        </section>
+
+        <!-- second section is started -->
+        <section class="skills">
+            <h2 class="heading-h2">What I do</h2>
+            <p class="para-3">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+
+                <div class="skills-child">
+                    <img src="./images/icons/js.png" alt="" class="img1">
+                    <h4 class="skills-title">Vanilla JavaScript</h4>
+                    <p class="skills-p1">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skills-child">
+                    <img src="./images/icons/react.png" alt="" class="img1">
+                    <h4 class="skills-title">React</h4>
+                    <p class="skills-p1">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skills-child">
+                    <img src="./images/icons/nodejs.png" alt="" class="img1">
+                    <h4 class="skills-title">Node.js</h4>
+                    <p class="skills-p1">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skills-child">
+                    <img src="./images/icons/mongo.png" alt="" class="img1">
+                    <h4 class="skills-title">MongoDB</h4>
+                    <p class="skills-p1">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
