section and footer added

--- a/index.html
+++ b/index.html
@@ -91,9 +91,91 @@
 
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- third section is started -->
+
+        <section class="resume">
+            <h1 class="heading-h3">A summary of My Resume</h1>
+
+            <div class="parent-resume">
+                <div class="resume-left">
+                   <h3 class="heading-h">My Education</h3>
+                  <div class="resume-left1">
+                    <h4 class="heading-h4">Master in Computer Engineering</h4>
+                    <h5 class="heading-h5">Harvard University / 2015 - 2017</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                     to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                 </div>
+                 <hr>
+                 <div class="resume-left1">
+                   
+                    <h4 class="heading-h4">Master in Computer Engineering</h4>
+                    <h5 class="heading-h5">Harvard University / 2015 - 2017</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                     to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                 </div>
+                 <hr>
+                 <div class="resume-left1">
+                 
+                    <h4 class="heading-h4">Master in Computer Engineering</h4>
+                    <h5 class="heading-h5">Harvard University / 2015 - 2017</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                     to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                     </div>
+                </div>
+                <div class="resume-right">
+                    <h3 class="heading-h">My Experience</h3>
+                    <div class="resume-right1">
+                    <h4 class="heading-h4">Sr. Font End Developer </h4>
+                    <h5 class="heading-h5">Apple Inc / 2020 - Current</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-right1">
+                    <h4 class="heading-h4">Jr. Font End Developer</h4>
+                    <h5 class="heading-h5">Dribbble Inc / 2018 - 2022</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-right1">
+                    <h4 class="heading-h4">HTML Developer</h4>
+                    <h5 class="heading-h5">Adobe Inc / 2017 - 2018</h5>
+                    <p class="parag">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button2">
+            <button class="button1">Download CV</button>
+
+            </div>
+        </section>
+    </main>
+    <footer id="footer-parent">
+          <div class="footer-colum">
+               <h3 class="heading-h31">Lets Connect</h3>
+               <p class="par1">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+               <div class="icons">
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+               </div>
+          </div>
+          <div class="footer-colum">
+                <h2 class="headin">Let’s Message me</h2>
+                <form>
+                    <label for="name">
+                        <input type="text" name="" id="name" placeholder="Your name">
+                    </label>
+                    <label for="email">
+                        <input type="email" name="" id="email" placeholder="Your email">
+                    </label>
+                    <textarea name="" type="" cols="130" rows="360" placeholder="Message"></textarea>
+                    <button class="button1" type="submit">Submit</button>
+                </form>
+          </div>
     </footer>
 </body>
 </html>
