--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="button1">Contact</button>
             </div>
             <div class="banner-image">
-                <img class="image1" src="/images/hardy.png" alt="">
+                <img class="image1" src="./images/hardy.png" alt="">
             </div>
           </div>
     </header>
