--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
@@ -25,8 +26,8 @@
                 <h4>Hi, I  am</h4>
                 <h1>Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="button1">Download CV</button>
-                <button class="button1">Contact</button>
+                <button class="button1"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="button1"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner-image">
                 <img class="image1" src="./images/hardy.png" alt="">
@@ -148,7 +149,7 @@
                 </div>
             </div>
             <div class="button2">
-            <button class="button1">Download CV</button>
+            <button class="button1"><i class="fa-solid fa-download"></i> Download CV</button>
 
             </div>
         </section>
